Fixed reply alignment

--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
-/* One Component*/
+body {
+  background-color: hsl(223, 19%, 93%);
+}
 
+/* One Component*/
+#panel {
+  width: 450px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 /* Post Div */
 section {
-  width: 400px;
-  margin: auto;
   padding: 2px;
   font-family: 'Rubik', sans-serif;
 }
 .complete-post,
 .complete-comment {
   display: flex;
-  border: 1px solid darkgrey;
   border-radius: 10px;
+  margin: 5px;
+  background-color: white;
+  padding: 10px;
 }
 /* post info*/
 .post-info {
@@ -19,6 +29,8 @@ section {
   flex-direction: column;
   margin: 0px;
   padding: 10px;
+
+  border-radius: 5px;
 }
 
 /* Counters */
@@ -33,6 +45,9 @@ section {
   background-color: (hsl(228, 33%, 97%));
   color: hsl(211, 10%, 45%);
   border-radius: 5px;
+}
+.count:hover {
+  color: hsl(238, 40%, 52%);
 }
 
 .counters {
@@ -53,7 +68,7 @@ section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 35px;
+  height: 25px;
   margin: 0px;
   align-items: center;
 }
@@ -63,10 +78,12 @@ section {
   align-items: center;
   gap: 10px;
 }
+
 .username {
   font-weight: bold;
   font-size: 0.75em;
   color: hsl(212, 24%, 26%);
+  margin: none;
 }
 .post-time {
   font-size: 0.5em;
@@ -79,34 +96,39 @@ section {
 }
 .reply-btn-post {
   border: none;
-  background-color: white;
   color: hsl(238, 40%, 52%);
   font-weight: bold;
   font-size: 0.75em;
+  background-color: white;
 }
+.reply-btn-post:hover {
+  color: hsl(239, 57%, 85%);
+}
+
 .post {
   font-size: 0.7em;
   color: darkgrey;
+  margin: 5px 0px;
 }
 /* Comment Box*/
 .complete-comment {
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .comment-profile-pic {
   display: flex;
   flex-direction: column;
-  width: 35px;
   padding: 3px;
 }
-
-.comment-box {
-  display: flex;
-  flex-direction: row;
+.comment-photo {
+  background-color: white;
+  width: 35px;
 }
+
 .stretch-box {
-  width: 280px;
+  flex-grow: 1;
   margin: 5px;
   border: 1px solid hsl(238, 40%, 52%);
   border-radius: 4px;
@@ -122,5 +144,21 @@ section {
   border-radius: 3px;
   border: none;
   padding: 5px 10px;
-  margin: 5px 1px;
+  margin: 5px;
+}
+.reply-btn:hover {
+  background-color: hsl(239, 57%, 85%);
+}
+
+/*Comment Reply*/
+
+.reply {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  /* margin: auto; */
+}
+
+.change-width {
+  width: 450px;
 }
